Ajustes relacionados ao openapi
