# openapi-spec.yaml
@@ -7,6 +7,14 @@ info:
 servers:
   - url: http://0.0.0.0:8080/api/v1
 
+tags:
+  - name: maca
+    description: Rotas relacionadas a macas
+  - name: balde
+    description: Rotas relacionadas a baldes
+  - name: balde-maca
+    description: Rotas relacionadas a movimentacao de macas em baldes
+
 components:
   schemas:
     Erro:
@@ -106,6 +114,8 @@ components:
 paths:
   /macas:
     post:
+      tags:
+        - maca
       summary: Cria uma nova maca
       requestBody:
         description: Payload para a criacao de uma nova maca
@@ -136,6 +146,8 @@ paths:
 
   /macas/{macaId}:
     delete:
+      tags:
+        - maca
       summary: Remove uma maca existente
       parameters:
         - name: macaId
@@ -170,6 +182,8 @@ paths:
 
   /baldes:
     post:
+      tags:
+        - balde
       summary: Cria um novo balde
       requestBody:
         description: Payload para a criacao de um novo balde
@@ -198,6 +212,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Erro'
     get:
+      tags:
+        - balde
       summary: Lista baldes com informacoes sobre porcentagem de ocupacao e valor total do conteudo
       responses:
         '200':
@@ -215,6 +231,8 @@ paths:
 
   /baldes/{baldeId}:
     delete:
+      tags:
+        - balde
       summary: Remove um balde existente
       parameters:
         - name: baldeId
@@ -249,6 +267,8 @@ paths:
 
   /baldes/{baldeId}/adicionar/{macaId}:
     patch:
+      tags:
+        - balde-maca
       summary: Move uma maca para dentro de um balde
       parameters:
         - name: baldeId
@@ -291,6 +311,8 @@ paths:
 
   /baldes/{baldeId}/remover/{macaId}:
     patch:
+      tags:
+        - balde-maca
       summary: Remove uma maca de dentro de um balde
       parameters:
         - name: baldeId
